--- a/FontsAndSettings.css
+++ b/FontsAndSettings.css
@@ -4,7 +4,7 @@ body
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
-    color: ghostwhite;
+    color: black;
 }
 
 
